// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelApiTypes Should have specific API properties: all exported api types 1`] = `
Object {
  "RHSM_API_QUERY_END_DATE": "ending",
  "RHSM_API_QUERY_GRANULARITY": "granularity",
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "daily",
    "MONTHLY": "monthly",
    "QUARTERLY": "quarterly",
    "WEEKLY": "weekly",
  },
  "RHSM_API_QUERY_LIMIT": "limit",
  "RHSM_API_QUERY_OFFSET": "offset",
  "RHSM_API_QUERY_START_DATE": "beginning",
  "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_CORES": "cores",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_DATE": "date",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_INSTANCES": "instance_count",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS": "sockets",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS_THRESHOLD": "sockets_threshold",
  "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
  "RHSM_API_RESPONSE_PRODUCTS_META_COUNT": "count",
  "default": Object {
    "RHSM_API_QUERY_END_DATE": "ending",
    "RHSM_API_QUERY_GRANULARITY": "granularity",
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_LIMIT": "limit",
    "RHSM_API_QUERY_OFFSET": "offset",
    "RHSM_API_QUERY_START_DATE": "beginning",
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_CORES": "cores",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_DATE": "date",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_INSTANCES": "instance_count",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS": "sockets",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS_THRESHOLD": "sockets_threshold",
    "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
    "RHSM_API_RESPONSE_PRODUCTS_META_COUNT": "count",
  },
  "rhelApiTypes": Object {
    "RHSM_API_QUERY_END_DATE": "ending",
    "RHSM_API_QUERY_GRANULARITY": "granularity",
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_LIMIT": "limit",
    "RHSM_API_QUERY_OFFSET": "offset",
    "RHSM_API_QUERY_START_DATE": "beginning",
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_CORES": "cores",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_DATE": "date",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_INSTANCES": "instance_count",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS": "sockets",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS_THRESHOLD": "sockets_threshold",
    "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
    "RHSM_API_RESPONSE_PRODUCTS_META_COUNT": "count",
  },
}
`;

exports[`RhelApiTypes Should have specific API properties: specific types 1`] = `
Object {
  "RHSM_API_QUERY_END_DATE": "ending",
  "RHSM_API_QUERY_GRANULARITY": "granularity",
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "daily",
    "MONTHLY": "monthly",
    "QUARTERLY": "quarterly",
    "WEEKLY": "weekly",
  },
  "RHSM_API_QUERY_LIMIT": "limit",
  "RHSM_API_QUERY_OFFSET": "offset",
  "RHSM_API_QUERY_START_DATE": "beginning",
  "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_CORES": "cores",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_DATE": "date",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_INSTANCES": "instance_count",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS": "sockets",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_SOCKETS_THRESHOLD": "sockets_threshold",
  "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
  "RHSM_API_RESPONSE_PRODUCTS_META_COUNT": "count",
}
`;
